--- a/simple-calc/Base.lproj/Main.storyboard
+++ b/simple-calc/Base.lproj/Main.storyboard
@@ -148,24 +148,11 @@
                                     <action selector="btn0:" destination="BYZ-38-t0r" eventType="touchDown" id="qum-sK-hCT"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UJh-CP-Xi0" userLabel="Fact">
-                                <frame key="frameInset" minX="192" minY="204" width="80" height="80"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.97647058823529409" green="0.70047667761996368" blue="0.18535566938727335" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
-                                <size key="titleShadowOffset" width="-6" height="0.0"/>
-                                <state key="normal" title="Fact">
-                                    <color key="titleColor" red="0.98900058739999996" green="1" blue="0.99644285860000004" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="btnFact:" destination="BYZ-38-t0r" eventType="touchDown" id="7uo-Rw-Cx7"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bKN-vU-nQ6">
-                                <frame key="frameInset" minX="104" minY="205" width="80" height="80"/>
+                                <frame key="frameInset" minX="87" minY="224" width="65" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.70047667761996368" blue="0.18535566938727335" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                 <size key="titleShadowOffset" width="-6" height="0.0"/>
                                 <state key="normal" title="Count">
                                     <color key="titleColor" red="0.98900058739999996" green="1" blue="0.99644285860000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -175,10 +162,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxd-Nk-yAx">
-                                <frame key="frameInset" minX="16" minY="205" width="80" height="80"/>
+                                <frame key="frameInset" minX="17" minY="224" width="65" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="0.36016379557516853" blue="0.41784803279949145" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                 <size key="titleShadowOffset" width="-6" height="0.0"/>
                                 <state key="normal" title="Clear">
                                     <color key="titleColor" red="0.98900058739999996" green="1" blue="0.99644285860000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -266,7 +253,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gkr-aj-Rel">
-                                <frame key="frameInset" minX="16" minY="46" width="343" height="53"/>
+                                <frame key="frameInset" minX="16" minY="60" width="343" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="30"/>
@@ -274,7 +261,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kBl-tH-6Hh" userLabel="Result Text">
-                                <frame key="frameInset" minX="17" minY="138" width="343" height="52"/>
+                                <frame key="frameInset" minX="17" minY="152" width="343" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="35"/>
@@ -282,30 +269,56 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Input:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOF-MG-fQs">
-                                <frame key="frameInset" minX="16" minY="4" width="80" height="37"/>
+                                <frame key="frameInset" minX="16" minY="20" width="80" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="output:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a8O-jZ-5Kk">
-                                <frame key="frameInset" minX="16" minY="99" width="80" height="37"/>
+                                <frame key="frameInset" minX="16" minY="112" width="80" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DIa-JX-efm">
-                                <frame key="frameInset" minX="279" minY="204" width="80" height="80"/>
+                                <frame key="frameInset" minX="225" minY="224" width="65" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.70047667761996368" blue="0.18535566938727335" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                 <size key="titleShadowOffset" width="-6" height="0.0"/>
                                 <state key="normal" title="Avg">
                                     <color key="titleColor" red="0.98900058739999996" green="1" blue="0.99644285860000004" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="btnAverage:" destination="BYZ-38-t0r" eventType="touchDown" id="g8B-yH-zv5"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3z5-Ha-P8c">
+                                <frame key="frameInset" minX="294" minY="224" width="65" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.97647058819999999" green="0.70047667759999999" blue="0.18535566940000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                <size key="titleShadowOffset" width="-6" height="0.0"/>
+                                <state key="normal" title="Mod">
+                                    <color key="titleColor" red="0.98900058739999996" green="1" blue="0.99644285860000004" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnAverage:" destination="BYZ-38-t0r" eventType="touchDown" id="UUa-dd-5JA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UJh-CP-Xi0" userLabel="Fact">
+                                <frame key="frameInset" minX="156" minY="224" width="65" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.70047667761996368" blue="0.18535566938727335" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                <size key="titleShadowOffset" width="-6" height="0.0"/>
+                                <state key="normal" title="Fact">
+                                    <color key="titleColor" red="0.98900058739999996" green="1" blue="0.99644285860000004" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnFact:" destination="BYZ-38-t0r" eventType="touchDown" id="7uo-Rw-Cx7"/>
                                 </connections>
                             </button>
                         </subviews>
